Clean up the article
The need for the benchmark of AET02 is already captured in issue #25 so it's safe to remove this note.

--- a/vignettes/articles/benchmarks.Rmd
+++ b/vignettes/articles/benchmarks.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "benchmarks"
+title: "Benchmarks"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{benchmarks}
@@ -73,9 +73,3 @@ bench::mark(
   check = FALSE
 )
 ```
-
-
-
-## Benchmarking AET02
-
-TODO
